site.css
/* ... */
/**********/
/* Footer */
/**********/

#footer-links {
  border-top: 5px solid #999999;
}

/*************/
/* Home Page */
/*************/

#greeting, #latestPhotos, #latestTopics,
#divisionHomeContent .introduction, #divisionHomeContent .image {
  border: 1px solid #999999; border-radius: 5px; padding: 1.385em 1.6em;
}

.image .metadata {
  width: 21em;
  right: 1.6em;
}

#task-tabs #latestPhotos, #task-tabs #latestTopics {
  border: none; 
  padding: 0;
  box-shadow: none;
}

/***************/
/* Pop-up Help */
/***************/

.popup-help {
  background: transparent;
}

/****************/
/* Static Pages */
/****************/

#content {
  border: 1px solid #999999;
  border-radius: 5px;
  padding: 1em 3.4em;
  margin-top: 1.385em;
  width: 51.385em;
}

/**************/
/* Group Home */
/**************/

#page-groups #divisionHomeContent {
  background: white;
  border: 1px solid gray;
  border-radius: 8px;
  margin: 10px 0;
  padding: 0 20px;
}

#group-intro {
  margin-top: -1.385em;
}
#group-intro h1 {
  line-height: 1;
  margin-bottom: 0;
}
#group-intro p {
  margin-top: 0;
}

#extended-topic-search #searcharea {
  top: 0;
  float: right;
  position: relative;
}

#extended-topic-search #searcharea #searchTextInput {
  margin: 0;
  width: 100px;
}

#extended-topic-tasks .alternateATOM {
  display: none;
}

#gs-group-messages-topics-loading {
  height: 39.25em; 
}
#gs-group-messages-topics-toolbar .ui-widget-header {
  border: none;
  background: none;
}

#gs-group-messages-topics-search-input {
  width: 28em;
}

#us-bar .userimage {
  width: 3.4em;
  height: 4.68em;
  overflow: hidden;
  border-radius: 3px;
}

#us-bar img {
  max-height: 100%;
  width: auto;
}

/***************/
/* Member Info */
/***************/

#memberdirectory_length select {
  width: 100%;
}

/*********************/
/* Individual Topics */
/*********************/

#divisionHomeContent .hfeed { 
  background: white;
  padding: 15px;
  border: 1px solid #999999;
  border-radius: 5px 5px 5px 5px;
  box-shadow: 3px 3px 9px rgba(136, 136, 136, 0.43);
}

/**********************/
/*  BeNeighbors.org   */
/* Neighborhood forums*/
/**********************/

.forum-directory {
  -moz-box-shadow: 2px 2px 10px #bbb;
  -webkit-box-shadow: 2px 2px 10px #bbb;
  box-shadow: 2px 2px 10px #bbb;
  border: 1px solid grey;
}

.forum-directory thead {
  background: lightBlue;
  font-size: 1.25em;
  border-radius 8px 8px 0 0;
  border: 1px solid grey;
}

.forum-directory th {
  text-align: left;
}

th.forum-directory-forum-home {
  width: 6em;
}

th.forum-directory-facebook {
  white-space: nowrap;
}

th.forum-directory-webfeed {
  /*width: 100px;*/
}

.forum-directory-even {
  background: lightGrey;
}

.forum-directory td {
  padding-bottom: .25em;
}

.forum-directory .forum-directory-neighborhoods {
  color: #666;
  font-style: italic;
  padding: 0 1em 1em 2.75em;
  border-bottom: 1px solid grey;
}

.forum-directory-forum-home {
  font-size: 1.5em;
  padding-top: 5px;
}

.forum-directory-join a{
  background: lightblue;
  padding: 5px 10px;
  border-radius: 8px;
  text-align: center;
  color: darkblue;
  text-decoration: none;
  border: 1px solid grey;
  font-weight: bold;
}

td.forum-directory-dc {
  text-align: center;
}

/* a bit of fancy footwork to make the webfeed header look nice */
th.forum-directory-webfeed {
  padding-top: 0;
  padding-left: 0;
}

th.forum-directory-webfeed img {
  position: relative;
  top: 25px;
  left: -23px;
}

/****************/
/* Search Boxes */
/****************/

.gs-search {
  min-height: 38em;
}

/*
 * jQuery UI CSS Framework 1.8.6
 *
 * Copyright 2010, AUTHORS.txt (http://jqueryui.com/about)
 * Dual licensed under the MIT or GPL Version 2 licenses.
 * http://jquery.org/license
 *
 * http://docs.jquery.com/UI/Theming/API
 *
 * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana,Arial,sans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=4px&bgColorHeader=DDDDDD&bgTextureHeader=03_highlight_soft.png&bgImgOpacityHeader=75&borderColorHeader=003366&fcHeader=003366&iconColorHeader=003366&bgColorContent=ffffff&bgTextureContent=01_flat.png&bgImgOpacityContent=75&borderColorContent=aaaaaa&fcContent=222222&iconColorContent=222222&bgColorDefault=e6e6e6&bgTextureDefault=02_glass.png&bgImgOpacityDefault=75&borderColorDefault=003366&fcDefault=003366&iconColorDefault=003366&bgColorHover=cccccc&bgTextureHover=02_glass.png&bgImgOpacityHover=75&borderColorHover=003366&fcHover=003366&iconColorHover=003366&bgColorActive=cccccc&bgTextureActive=02_glass.png&bgImgOpacityActive=65&borderColorActive=aaaaaa&fcActive=003366&iconColorActive=003366&bgColorHighlight=FFE45C&bgTextureHighlight=03_highlight_soft.png&bgImgOpacityHighlight=55&borderColorHighlight=003366&fcHighlight=363636&iconColorHighlight=2e83ff&bgColorError=b81900&bgTextureError=08_diagonals_thick.png&bgImgOpacityError=18&borderColorError=cd0a0a&fcError=ffffff&iconColorError=ffd27a&bgColorOverlay=aaaaaa&bgTextureOverlay=01_flat.png&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=aaaaaa&bgTextureShadow=01_flat.png&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
 */


/* Component containers
----------------------------------*/
.ui-widget-content { border: 1px solid #999999; background: #ffffff url(http://forums.e-democracy.org/++resource++jquery-icons/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #222222; }
.ui-widget-content a { color: #222222; }
.ui-widget-header { border: 0px solid #999999; border-bottom-width: 1px; background: #dddddd url(http://forums.e-democracy.org/++resource++jquery-icons/ui-bg_highlight-soft_75_dddddd_1x100.png) 50% 50% repeat-x; color: #003366; font-weight: bold; }
.ui-widget-header a { color: #003366; }
/* ... */

